ENH: Notebook landmark registration

--- a/examples/MouseFemurMicroCT.ipynb
+++ b/examples/MouseFemurMicroCT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "\n",
     "from itkwidgets import view\n",
-    "from ipywidgets import FloatProgress, Label, HBox"
+    "from ipywidgets import FloatProgress, Label, HBox, VBox, FloatText, ColorPicker, Button"
    ]
   },
   {
@@ -91,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ebba0209cc84f1ba1366b29e27fa38f",
+       "model_id": "477f315e0226462ea9915aa7ab8f6bf5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,22 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "itkPointSetD3 not loaded from module ITKRegistrationCommon because of exception:\n",
-      " module 'itk.ITKRegistrationCommonPython' has no attribute 'itkPointSetD3'\n",
-      "Template itk::LandmarkAtlasSegmentationFilter<itk::Image<signedshort,3>,itk::Image<signedshort,3>>\n",
-      " already defined as <class 'itk.itkLandmarkAtlasSegmentationFilterPython.itkLandmarkAtlasSegmentationFilterISS3ISS3'>\n",
-      " is redefined as <class 'itk.itkLandmarkAtlasSegmentationFilterPython.itkLandmarkAtlasSegmentationFilterISS3ISS3'>\n",
-      "Warning: template already defined 'itk::LandmarkAtlasSegmentationFilter<itk::Image<signedshort,3>,itk::Image<signedshort,3>>'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bone_segmenter = itk.SegmentBonesInMicroCTFilter.New(image)\n",
     "cortical_thickness=0.1\n",
@@ -157,23 +144,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_image = bone_segmenter.GetOutput()\n",
+    "label_file_name = file_name + '-labels.nrrd'\n",
+    "itk.imwrite(label_image, label_file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34c54dabc39c458cba467be6d4b53b04",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-2.4597874 , 19.208582  , 45.884567  ],\n",
-       "       [ 4.855     ,…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'camera' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-3ba2a4dcd3a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m      \u001b[0mgradient_opacity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m      \u001b[0mbackground\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m      \u001b[0mcamera\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcamera\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m      \u001b[0mui_collapsed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m      )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'camera' is not defined"
+     ]
     }
    ],
    "source": [
@@ -190,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,13 +206,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download atlas label image\n",
+    "atlas_label_file_name = '907-L-atlas.nrrd'\n",
+    "if not os.path.exists(atlas_label_file_name):\n",
+    "    url = 'https://data.kitware.com/api/v1/file/5ef372559014a6d84edb627e/download'\n",
+    "    urlretrieve(url, atlas_label_file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atlas_label = itk.imread(atlas_label_file_name)\n",
+    "# view(label_image=atlas_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e231e5222e44a7fa3f92760dae2729a",
+       "model_id": "3cdb57129d994e70a73e531aa195e954",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,20 +262,20 @@
     "     background=(0.6,0.6,0.6),\n",
     "     cmap='bone_Matlab',\n",
     "     opacity_gaussians=opacity_gaussians,\n",
-    "     point_set_sizes=[10,]*3,\n",
+    "     point_set_sizes=[15,]*3,\n",
     "     point_set_representations=['spheres',]*3,\n",
     "     point_sets=[center_of_femur_head, femur_shaft, dent])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5367f99f7613450a86caf8de326a4a87",
+       "model_id": "4d321d2fd52d493dba4ddc27d3ae59c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -275,14 +292,270 @@
     "femur_shaft = np.array([7.424,9.474,44.711]).reshape((1,3))\n",
     "dent = np.array([5.018,9.058,47.535]).reshape((1,3))\n",
     "\n",
-    "view(image,\n",
+    "opacity_gaussians = [[{'position': 0.33611111111111114,\n",
+    "   'height': 0.24545454545454548,\n",
+    "   'width': 0.22499999999999998,\n",
+    "   'xBias': 0.51,\n",
+    "   'yBias': 0.4}]]\n",
+    "viewer = view(image,\n",
     "     gradient_opacity=1.0,\n",
     "     background=(0.6,0.6,0.6),\n",
     "     cmap='bone_Matlab',\n",
     "     opacity_gaussians=opacity_gaussians,\n",
-    "     point_set_sizes=[10,]*3,\n",
+    "     point_set_sizes=[15,]*3,\n",
     "     point_set_representations=['spheres',]*3,\n",
-    "     point_sets=[center_of_femur_head, femur_shaft, dent])"
+    "     point_sets=[center_of_femur_head, femur_shaft, dent])\n",
+    "viewer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7bdd0351d9e447e39cf44ddad99e4665",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(VBox(children=(HBox(children=(ColorPicker(value='#d60000', concise=True, description='Head Cent…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "head_center_widgets_top = [ColorPicker(description='Head Center ', concise=True, value='#d60000', disabled=True),\n",
+    "                           Button(description='From last click', tooltip='Set from last clicked slice point', icon='dot-circle-o'),]\n",
+    "head_center_widgets_bottom = [FloatText(value=4.945, description='x:'),\n",
+    "                              FloatText(value=9.225, description='y:'),\n",
+    "                              FloatText(value=46.011, description='z:'),]\n",
+    "def head_center_from_click(change):\n",
+    "    position = viewer.clicked_slice_point.position\n",
+    "    for i in range(3):\n",
+    "        head_center_widgets_bottom[i].value = position[i]\n",
+    "head_center_widgets_top[1].on_click(head_center_from_click)\n",
+    "head_center_box = VBox([HBox(head_center_widgets_top), HBox(head_center_widgets_bottom)])\n",
+    "\n",
+    "shaft_widgets_top = [ColorPicker(description='Shaft', concise=True, value='#8c39ff', disabled=True),\n",
+    "                     Button(description='From last click', tooltip='Set from last clicked slice point', icon='dot-circle-o'),]\n",
+    "shaft_widgets_bottom = [FloatText(value=7.424, description='x:'),\n",
+    "                        FloatText(value=9.474, description='y:'),\n",
+    "                        FloatText(value=44.711, description='z:'),]\n",
+    "shaft_box = VBox([HBox(shaft_widgets_top), HBox(shaft_widgets_bottom)])\n",
+    "\n",
+    "indent_widgets_top = [ColorPicker(description='Indent', concise=True, value='#018700', disabled=True),\n",
+    "                     Button(description='From last click', tooltip='Set from last clicked slice point', icon='dot-circle-o'),]\n",
+    "indent_widgets_bottom = [FloatText(value=5.018, description='x:'),\n",
+    "                         FloatText(value=9.058, description='y:'),\n",
+    "                         FloatText(value=47.535, description='z:'),]\n",
+    "indent_box = VBox([HBox(indent_widgets_top), HBox(indent_widgets_bottom)])\n",
+    "\n",
+    "def update_positions():\n",
+    "    head_center_point = np.array([ft.value for ft in head_center_widgets_bottom]).reshape((1,3))\n",
+    "    shaft_point = np.array([ft.value for ft in shaft_widgets_bottom]).reshape((1,3))\n",
+    "    indent_point = np.array([ft.value for ft in indent_widgets_bottom]).reshape((1,3))\n",
+    "    viewer.point_sets = [head_center_point, shaft_point, indent_point]\n",
+    "\n",
+    "\n",
+    "def head_center_from_click(change):\n",
+    "    if viewer.clicked_slice_point is None:\n",
+    "        return\n",
+    "    position = viewer.clicked_slice_point.position\n",
+    "    for i in range(3):\n",
+    "        head_center_widgets_bottom[i].value = position[i]\n",
+    "    update_positions()\n",
+    "head_center_widgets_top[1].on_click(head_center_from_click)\n",
+    "def shaft_from_click(change):\n",
+    "    if viewer.clicked_slice_point is None:\n",
+    "        return\n",
+    "    position = viewer.clicked_slice_point.position\n",
+    "    for i in range(3):\n",
+    "        shaft_widgets_bottom[i].value = position[i]\n",
+    "    update_positions()\n",
+    "shaft_widgets_top[1].on_click(shaft_from_click)\n",
+    "def indent_from_click(change):\n",
+    "    if viewer.clicked_slice_point is None:\n",
+    "        return\n",
+    "    position = viewer.clicked_slice_point.position\n",
+    "    for i in range(3):\n",
+    "        indent_widgets_bottom[i].value = position[i]\n",
+    "    update_positions()\n",
+    "shaft_widgets_top[1].on_click(shaft_from_click)\n",
+    "for float_input in head_center_widgets_bottom + shaft_widgets_bottom + indent_widgets_bottom:\n",
+    "    float_input.observe(lambda x: update_positions(), 'value')\n",
+    "\n",
+    "position_widgets = VBox([head_center_box, shaft_box, indent_box])\n",
+    "position_widgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "landmark_registration = itk.LandmarkAtlasSegmentationFilter[type(image), type(label_image)].New()\n",
+    "landmark_registration.SetInput(image)\n",
+    "landmark_registration.SetInput(1, atlas)\n",
+    "landmark_registration.SetInputLabels(label_image)\n",
+    "landmark_registration.SetAtlasLabels(atlas_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LandmarksType = itk.vector[itk.Point[itk.D, 3]]\n",
+    "\n",
+    "input_landmarks = LandmarksType()\n",
+    "input_landmarks.push_back([ft.value for ft in head_center_widgets_bottom])\n",
+    "input_landmarks.push_back([ft.value for ft in shaft_widgets_bottom])\n",
+    "input_landmarks.push_back([ft.value for ft in indent_widgets_bottom])\n",
+    "landmark_registration.SetInputLandmarks(input_landmarks)\n",
+    "\n",
+    "atlas_landmarks = LandmarksType()\n",
+    "atlas_landmarks.push_back([4.072,11.347,43.816])\n",
+    "atlas_landmarks.push_back([7.713,9.107,42.649])\n",
+    "atlas_landmarks.push_back([3.787,11.172,45.173])\n",
+    "landmark_registration.SetAtlasLandmarks(atlas_landmarks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 45.4 s, sys: 1.41 s, total: 46.8 s\n",
+      "Wall time: 10.7 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time landmark_registration.Update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "064d1d70f9784c378231e436f4143724",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Viewer(geometries=[], gradient_opacity=0.22, interpolation=False, point_sets=[], rendered_image=<itk.itkImageP…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "view(image=image, label_image=landmark_registration.GetOutput())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = viewer.point_set_colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(viewer.point_sets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<enumerate at 0x7f92a092f880>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enumerate(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [0.8392157 0.        0.       ]\n",
+      "1 [0.54901963 0.23137255 1.        ]\n",
+      "2 [0.00392157 0.5294118  0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, color in enumerate(c):\n",
+    "    print(index,color)"
    ]
   },
   {
