ENH: Notebook cropping

--- a/examples/MouseFemurMicroCT.ipynb
+++ b/examples/MouseFemurMicroCT.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
@@ -48,7 +48,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aeb68977517448bba834b112831781d7",
+       "model_id": "ef5c425782bd48d6b8a55623e4ad03c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,19 +155,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'camera' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-3ba2a4dcd3a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m      \u001b[0mgradient_opacity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m      \u001b[0mbackground\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m      \u001b[0mcamera\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcamera\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m      \u001b[0mui_collapsed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m      )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'camera' is not defined"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f28765c6c6244b439541596628d05a91",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Viewer(background=(0.6, 0.6, 0.6), camera=array([[-2.4597874 , 19.208582  , 45.884567  ],\n",
+       "       [ 4.855     ,…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -471,91 +475,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = viewer.point_set_colors"
+    "input_masked_trabecular = itk.mask_negated_image_filter(image, mask_image=label_image, masking_value=2)\n",
+    "input_masked_cancellous = itk.mask_negated_image_filter(image, mask_image=label_image, masking_value=1)\n",
+    "input_masked = itk.add_image_filter(input_masked_trabecular, input_masked_cancellous)\n",
+    "del input_masked_trabecular\n",
+    "del input_masked_cancellous"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atlas_masked = itk.mask_image_filter(atlas, mask_image=atlas_label, masking_value=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_masked_trabecular = itk.mask_negated_image_filter(label_image, mask_image=label_image, masking_value=2)\n",
+    "label_masked_cancellous = itk.mask_negated_image_filter(label_image, mask_image=label_image, masking_value=1)\n",
+    "label_masked = itk.add_image_filter(label_masked_trabecular, label_masked_cancellous)\n",
+    "label_masked = itk.cast_image_filter(label_masked, ttype=(type(label_masked), itk.Image[itk.UC, 3]))\n",
+    "del label_masked_trabecular\n",
+    "del label_masked_cancellous"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_masked_map = itk.label_image_to_label_map_filter(label_masked)\n",
+    "cropped = itk.auto_crop_label_map_filter(label_masked_map, crop_border=[6,]*3)\n",
+    "label_masked_cropped = itk.label_map_to_label_image_filter(cropped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_masked_cropped = itk.extract_image_filter(input_masked,\n",
+    "                                                extraction_region=label_masked_cropped.GetLargestPossibleRegion())\n",
+    "# view(input_masked_cropped, label_image=label_masked_cropped)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ceb9c5b605a041d5b67d54c2a9c19125",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Viewer(geometries=[], gradient_opacity=0.22, interpolation=False, point_sets=[], rendered_image=<itk.itkImageP…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform = landmark_registration.GetFinalTransform()\n",
+    "atlas_affine_transformed = itk.resample_image_filter(atlas_masked,\n",
+    "                                                     use_reference_image=True,\n",
+    "                                                     reference_image=input_masked_cropped,\n",
+    "                                                     transform=transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "itkSize3 ([312, 287, 357])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(c)"
+    "itk.size(atlas_affine_transformed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(viewer.point_sets)"
+    "atlas_label_uchar = itk.cast_image_filter(atlas_label, ttype=(type(atlas_label), itk.Image[itk.UC, 3]))\n",
+    "atlas_map = itk.label_image_to_label_map_filter(atlas_label_uchar)\n",
+    "cropped = itk.auto_crop_label_map_filter(atlas_map, crop_border=[6,]*3)\n",
+    "atlas_label_cropped = itk.label_map_to_label_image_filter(cropped)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<enumerate at 0x7f92a092f880>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "enumerate(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 [0.8392157 0.        0.       ]\n",
-      "1 [0.54901963 0.23137255 1.        ]\n",
-      "2 [0.00392157 0.5294118  0.        ]\n"
+      "Image (0x55a5de0cce40)\n",
+      "  RTTI typeinfo:   itk::Image<short, 3u>\n",
+      "  Reference Count: 2\n",
+      "  Modified Time: 2737\n",
+      "  Debug: Off\n",
+      "  Object Name: \n",
+      "  Observers: \n",
+      "    none\n",
+      "  Source: (none)\n",
+      "  Source output name: (none)\n",
+      "  Release Data: Off\n",
+      "  Data Released: False\n",
+      "  Global Release Data: Off\n",
+      "  PipelineMTime: 2546\n",
+      "  UpdateMTime: 2736\n",
+      "  RealTimeStamp: 0 seconds \n",
+      "  LargestPossibleRegion: \n",
+      "    Dimension: 3\n",
+      "    Index: [0, 0, 0]\n",
+      "    Size: [585, 416, 814]\n",
+      "  BufferedRegion: \n",
+      "    Dimension: 3\n",
+      "    Index: [0, 0, 0]\n",
+      "    Size: [585, 416, 814]\n",
+      "  RequestedRegion: \n",
+      "    Dimension: 3\n",
+      "    Index: [0, 0, 0]\n",
+      "    Size: [585, 416, 814]\n",
+      "  Spacing: [0.01, 0.01, 0.01]\n",
+      "  Origin: [1.67, 8.97, 42.128]\n",
+      "  Direction: \n",
+      "1 0 0\n",
+      "0 1 0\n",
+      "0 0 1\n",
+      "\n",
+      "  IndexToPointMatrix: \n",
+      "0.01 0 0\n",
+      "0 0.01 0\n",
+      "0 0 0.01\n",
+      "\n",
+      "  PointToIndexMatrix: \n",
+      "100 0 0\n",
+      "0 100 0\n",
+      "0 0 100\n",
+      "\n",
+      "  Inverse Direction: \n",
+      "1 0 0\n",
+      "0 1 0\n",
+      "0 0 1\n",
+      "\n",
+      "  PixelContainer: \n",
+      "    ImportImageContainer (0x55a5de0f3e20)\n",
+      "      RTTI typeinfo:   itk::ImportImageContainer<unsigned long, short>\n",
+      "      Reference Count: 1\n",
+      "      Modified Time: 2733\n",
+      "      Debug: Off\n",
+      "      Object Name: \n",
+      "      Observers: \n",
+      "        none\n",
+      "      Pointer: 0x7f582c093010\n",
+      "      Container manages memory: true\n",
+      "      Size: 198095040\n",
+      "      Capacity: 198095040\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for index, color in enumerate(c):\n",
-    "    print(index,color)"
+    "print(atlas_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image (0x55a5e74f2280)\n",
+      "  RTTI typeinfo:   itk::Image<unsigned char, 3u>\n",
+      "  Reference Count: 1\n",
+      "  Modified Time: 959110\n",
+      "  Debug: Off\n",
+      "  Object Name: \n",
+      "  Observers: \n",
+      "    none\n",
+      "  Source: (none)\n",
+      "  Source output name: (none)\n",
+      "  Release Data: Off\n",
+      "  Data Released: False\n",
+      "  Global Release Data: Off\n",
+      "  PipelineMTime: 959100\n",
+      "  UpdateMTime: 959109\n",
+      "  RealTimeStamp: 0 seconds \n",
+      "  LargestPossibleRegion: \n",
+      "    Dimension: 3\n",
+      "    Index: [106, 0, 0]\n",
+      "    Size: [479, 364, 383]\n",
+      "  BufferedRegion: \n",
+      "    Dimension: 3\n",
+      "    Index: [106, 0, 0]\n",
+      "    Size: [479, 364, 383]\n",
+      "  RequestedRegion: \n",
+      "    Dimension: 3\n",
+      "    Index: [106, 0, 0]\n",
+      "    Size: [479, 364, 383]\n",
+      "  Spacing: [0.01, 0.01, 0.01]\n",
+      "  Origin: [1.67, 8.97, 42.128]\n",
+      "  Direction: \n",
+      "1 0 0\n",
+      "0 1 0\n",
+      "0 0 1\n",
+      "\n",
+      "  IndexToPointMatrix: \n",
+      "0.01 0 0\n",
+      "0 0.01 0\n",
+      "0 0 0.01\n",
+      "\n",
+      "  PointToIndexMatrix: \n",
+      "100 0 0\n",
+      "0 100 0\n",
+      "0 0 100\n",
+      "\n",
+      "  Inverse Direction: \n",
+      "1 0 0\n",
+      "0 1 0\n",
+      "0 0 1\n",
+      "\n",
+      "  PixelContainer: \n",
+      "    ImportImageContainer (0x55a5d8bbe000)\n",
+      "      RTTI typeinfo:   itk::ImportImageContainer<unsigned long, unsigned char>\n",
+      "      Reference Count: 3\n",
+      "      Modified Time: 959107\n",
+      "      Debug: Off\n",
+      "      Object Name: \n",
+      "      Observers: \n",
+      "        none\n",
+      "      Pointer: 0x7f57c8050010\n",
+      "      Container manages memory: true\n",
+      "      Size: 66778348\n",
+      "      Capacity: 66778348\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(atlas_label_cropped)"
    ]
   },
   {
