ENH: Notebook deformable Elastix registration

--- a/examples/MouseFemurMicroCT.ipynb
+++ b/examples/MouseFemurMicroCT.ipynb
@@ -568,194 +568,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nearest_interpolator = itk.NearestNeighborInterpolateImageFunction.New(atlas_label)\n",
+    "atlas_labels_affine_transformed = itk.resample_image_filter(atlas_label,\n",
+    "                                                            use_reference_image=True,\n",
+    "                                                            reference_image=input_masked_cropped,\n",
+    "                                                            transform=transform,\n",
+    "                                                            interpolator=nearest_interpolator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "itk.imwrite(input_masked_cropped, file_name + '-input-masked-cropped.nrrd')\n",
+    "itk.imwrite(atlas_affine_transformed, file_name + '-atlas-affine-transformed.nrrd')\n",
+    "itk.imwrite(atlas_labels_affine_transformed, file_name + '-atlas-labels-affine-transformed.nrrd')\n",
+    "# view(atlas_affine_transformed, label_image=atlas_labels_affine_transformed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_masked_cropped_f = itk.imread(file_name + '-input-masked-cropped.nrrd', itk.F)\n",
+    "atlas_affine_transformed_f = itk.imread(file_name + '-atlas-affine-transformed.nrrd', itk.F)\n",
+    "atlas_labels_affine_transformed_f = itk.imread(file_name + '-atlas-labels-affine-transformed.nrrd', itk.F)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "registered_atlas, transform_parameter_object = itk.elastix_registration_method(input_masked_cropped_f, atlas_affine_transformed_f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformer = itk.TransformixFilter[type(atlas_labels_affine_transformed_f)].New()\n",
+    "transformer.SetMovingImage(atlas_labels_affine_transformed_f)\n",
+    "transformer.SetTransformParameterObject(transform_parameter_object)\n",
+    "transformer.Update()\n",
+    "transformed = transformer.GetOutput()\n",
+    "transformed_cast = itk.cast_image_filter(transformed, ttype=(type(transformed), it))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "502e9ae110e141d8acbd8ef466b549db",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "itkSize3 ([312, 287, 357])"
+       "Viewer(geometries=[], gradient_opacity=0.22, interpolation=False, point_sets=[], rendered_image=<itk.itkImageP…"
       ]
      },
-     "execution_count": 108,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "itk.size(atlas_affine_transformed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "atlas_label_uchar = itk.cast_image_filter(atlas_label, ttype=(type(atlas_label), itk.Image[itk.UC, 3]))\n",
-    "atlas_map = itk.label_image_to_label_map_filter(atlas_label_uchar)\n",
-    "cropped = itk.auto_crop_label_map_filter(atlas_map, crop_border=[6,]*3)\n",
-    "atlas_label_cropped = itk.label_map_to_label_image_filter(cropped)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image (0x55a5de0cce40)\n",
-      "  RTTI typeinfo:   itk::Image<short, 3u>\n",
-      "  Reference Count: 2\n",
-      "  Modified Time: 2737\n",
-      "  Debug: Off\n",
-      "  Object Name: \n",
-      "  Observers: \n",
-      "    none\n",
-      "  Source: (none)\n",
-      "  Source output name: (none)\n",
-      "  Release Data: Off\n",
-      "  Data Released: False\n",
-      "  Global Release Data: Off\n",
-      "  PipelineMTime: 2546\n",
-      "  UpdateMTime: 2736\n",
-      "  RealTimeStamp: 0 seconds \n",
-      "  LargestPossibleRegion: \n",
-      "    Dimension: 3\n",
-      "    Index: [0, 0, 0]\n",
-      "    Size: [585, 416, 814]\n",
-      "  BufferedRegion: \n",
-      "    Dimension: 3\n",
-      "    Index: [0, 0, 0]\n",
-      "    Size: [585, 416, 814]\n",
-      "  RequestedRegion: \n",
-      "    Dimension: 3\n",
-      "    Index: [0, 0, 0]\n",
-      "    Size: [585, 416, 814]\n",
-      "  Spacing: [0.01, 0.01, 0.01]\n",
-      "  Origin: [1.67, 8.97, 42.128]\n",
-      "  Direction: \n",
-      "1 0 0\n",
-      "0 1 0\n",
-      "0 0 1\n",
-      "\n",
-      "  IndexToPointMatrix: \n",
-      "0.01 0 0\n",
-      "0 0.01 0\n",
-      "0 0 0.01\n",
-      "\n",
-      "  PointToIndexMatrix: \n",
-      "100 0 0\n",
-      "0 100 0\n",
-      "0 0 100\n",
-      "\n",
-      "  Inverse Direction: \n",
-      "1 0 0\n",
-      "0 1 0\n",
-      "0 0 1\n",
-      "\n",
-      "  PixelContainer: \n",
-      "    ImportImageContainer (0x55a5de0f3e20)\n",
-      "      RTTI typeinfo:   itk::ImportImageContainer<unsigned long, short>\n",
-      "      Reference Count: 1\n",
-      "      Modified Time: 2733\n",
-      "      Debug: Off\n",
-      "      Object Name: \n",
-      "      Observers: \n",
-      "        none\n",
-      "      Pointer: 0x7f582c093010\n",
-      "      Container manages memory: true\n",
-      "      Size: 198095040\n",
-      "      Capacity: 198095040\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(atlas_label)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image (0x55a5e74f2280)\n",
-      "  RTTI typeinfo:   itk::Image<unsigned char, 3u>\n",
-      "  Reference Count: 1\n",
-      "  Modified Time: 959110\n",
-      "  Debug: Off\n",
-      "  Object Name: \n",
-      "  Observers: \n",
-      "    none\n",
-      "  Source: (none)\n",
-      "  Source output name: (none)\n",
-      "  Release Data: Off\n",
-      "  Data Released: False\n",
-      "  Global Release Data: Off\n",
-      "  PipelineMTime: 959100\n",
-      "  UpdateMTime: 959109\n",
-      "  RealTimeStamp: 0 seconds \n",
-      "  LargestPossibleRegion: \n",
-      "    Dimension: 3\n",
-      "    Index: [106, 0, 0]\n",
-      "    Size: [479, 364, 383]\n",
-      "  BufferedRegion: \n",
-      "    Dimension: 3\n",
-      "    Index: [106, 0, 0]\n",
-      "    Size: [479, 364, 383]\n",
-      "  RequestedRegion: \n",
-      "    Dimension: 3\n",
-      "    Index: [106, 0, 0]\n",
-      "    Size: [479, 364, 383]\n",
-      "  Spacing: [0.01, 0.01, 0.01]\n",
-      "  Origin: [1.67, 8.97, 42.128]\n",
-      "  Direction: \n",
-      "1 0 0\n",
-      "0 1 0\n",
-      "0 0 1\n",
-      "\n",
-      "  IndexToPointMatrix: \n",
-      "0.01 0 0\n",
-      "0 0.01 0\n",
-      "0 0 0.01\n",
-      "\n",
-      "  PointToIndexMatrix: \n",
-      "100 0 0\n",
-      "0 100 0\n",
-      "0 0 100\n",
-      "\n",
-      "  Inverse Direction: \n",
-      "1 0 0\n",
-      "0 1 0\n",
-      "0 0 1\n",
-      "\n",
-      "  PixelContainer: \n",
-      "    ImportImageContainer (0x55a5d8bbe000)\n",
-      "      RTTI typeinfo:   itk::ImportImageContainer<unsigned long, unsigned char>\n",
-      "      Reference Count: 3\n",
-      "      Modified Time: 959107\n",
-      "      Debug: Off\n",
-      "      Object Name: \n",
-      "      Observers: \n",
-      "        none\n",
-      "      Pointer: 0x7f57c8050010\n",
-      "      Container manages memory: true\n",
-      "      Size: 66778348\n",
-      "      Capacity: 66778348\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(atlas_label_cropped)"
+    "view(input_masked_cropped, label_image=transformed_cast)"
    ]
   },
   {
