ENH: Highlight bone result region of interest

--- a/examples/MouseFemurMicroCT.ipynb
+++ b/examples/MouseFemurMicroCT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import itk\n",
     "import numpy as np\n",
     "\n",
-    "from itkwidgets import view\n",
+    "from itkwidgets import view, cm\n",
     "from ipywidgets import FloatProgress, Label, HBox, VBox, FloatText, ColorPicker, Button"
    ]
   },
@@ -68,11 +68,6 @@
     "camera = np.array([[-2.4597874 , 19.208582  , 45.884567  ],\n",
     "       [ 4.855     ,  9.24      , 48.065998  ],\n",
     "       [-0.22125234,  0.05076638,  0.97389436]], dtype=np.float32)\n",
-    "opacity_gaussians = [[{'position': 0.3,\n",
-    "   'height': 0.7545454545454545,\n",
-    "   'width': 0.2194444444444444,\n",
-    "   'xBias': 0.03777777777777777,\n",
-    "   'yBias': 0}]]\n",
     "opacity_gaussians = [[{'position': 0.23888888888888893,\n",
     "   'height': 0.3090909090909091,\n",
     "   'width': 0.1722222222222221,\n",
@@ -628,18 +623,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "502e9ae110e141d8acbd8ef466b549db",
+       "model_id": "42c279e5fdf442d3b650d266f92eee46",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Viewer(geometries=[], gradient_opacity=0.22, interpolation=False, point_sets=[], rendered_image=<itk.itkImageP…"
+       "Viewer(cmap=['bone_Matlab'], geometries=[], gradient_opacity=0.22, interpolation=False, label_image_blend=0.7,…"
       ]
      },
      "metadata": {},
@@ -647,7 +642,24 @@
     }
    ],
    "source": [
-    "view(input_masked_cropped, label_image=transformed_cast)"
+    "registered = view(input_masked_cropped,\n",
+    "                  label_image=transformed_cast,\n",
+    "                  label_image_blend=0.7,\n",
+    "                  cmap=cm.bone,\n",
+    "                  ui_collapsed=True,\n",
+    "                  )\n",
+    "registered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights = np.ones((10,), dtype=np.float32)*0.1\n",
+    "weights[5] = 1.0\n",
+    "registered.label_image_weights = weights"
    ]
   },
   {
